--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['-m', 'rsync', '-d', '-r', '.','gs://workep.com']
+- name: 'google/cloud-sdk:252.0.0-slim'
+  args: ['gsutil', '-m', 'rsync', '-d', '-r', '.','gs://workep.com']
